tests/vertical-slice/reject/move_into_record_vec.hew
type Holder { values: Vec<string>; }

fn main() -> i64 {
    let values: Vec<string> = Vec::new();
    values.push("alpha");
    let _holder = Holder { values: values };
    values.len()
}
